--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 @import url('./css/brend-section.css');
 @import url('./css/parts-section.css');
 @import url('./css/reset.css');
+@import url('./css/work-section.css');
 
 .container,
 footer,
