--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,13 +1,13 @@
 header{
    margin-bottom: 8px;
 background: linear-gradient(to right, #cceeff, #66a3ff);
-/* position: sticky;
-top: 0;
-left: 0; */
+padding: 4px 8px;
+border: 1px solid #4c4e61;
+    border-radius: 8px;
 }
 
 .chek-item {
-    padding: 10px 15px;
+    padding: 4px 14px;
     border: 1px solid #4c4e61;
     border-radius: 4px;
 }
@@ -22,7 +22,7 @@ left: 0; */
 }
 
 .chek-container{
-    width: 1260px;
+    /* width: 1260px; */
     margin-left: auto;
     margin-right: auto;
 }
@@ -47,14 +47,18 @@ left: 0; */
     background-color: #f4f5f6;
 }
 
+.contacts{
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+}
+
 .contact-container{
     display: flex;
-    width: 1260px;
+    width: 1160px;
     margin-left: auto;
     margin-right: auto;
     justify-content: space-between;
-    margin-top: 8px;
-    margin-bottom: 8px;
 }
 
 .chek-item:hover {
