--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -40,3 +40,9 @@ html {
     scroll-behavior: smooth;
     /* Плавный скролл */
 }
+
+body{
+    max-width: 1160px;
+    margin-left: auto;
+    margin-right: auto;
+}
