--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -41,8 +41,22 @@ html {
     /* Плавный скролл */
 }
 
+/* цвет фона */
+
+header, body, footer{
+background: #f8fafc;
+}
+
 body{
-    max-width: 1160px;
+    /* max-width: 1160px; */
     margin-left: auto;
     margin-right: auto;
 }
+
+header{
+    /* max-width: 1160px; */
+    margin-left: auto;
+    margin-right: auto;
+    padding: 4px 8px;
+}
+
