--- a/src/css/work-section.css
+++ b/src/css/work-section.css
@@ -1,13 +1,64 @@
 .work-section{
-    padding: 8px 14px;
+    background-color: white;
+    height: 100%;
+    padding: 22px 30px;
+}
+
+.work-title{
     display: flex;
-    gap: 8px;
+    justify-content: center;
+    /* margin-top: 4px; */
+    margin-bottom: 8px;
+
 }
 
-.work-img{
-    max-width: 580px;
+.work-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    /* Расстояние между карточками */
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.work-content{
+.work-item {
+    flex: 1;
+    /* Равная ширина для всех элементов */
+    min-width: 0;
+    /* Фикс для flexbox */
+}
+
+.work-card {
+    border-radius: 10px;
+    height: 100%;
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
+    padding: 4px 12px;
+}
+
+.card-title{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4px;
+}
+
+.work-time {
     padding: 8px 12px;
+    border-radius: 20px;
+    display: inline-block;
+    font-size: 0.9rem;
+    padding-left: 40px;
+}
+
+.work-time span {
+    font-weight: bold;
+    color: #3498db;
+}
+
+.work-features{
+    padding: 8px 12px;
+}
+
+.work-section svg {
+    margin-right: 4px;
 }
