--- a/src/css/brend-section.css
+++ b/src/css/brend-section.css
@@ -1,14 +1,8 @@
 /* Основные стили */
 .brend-section {
-    padding: 60px 0;
-    background: #f8f9fa;
+    padding: 20px 30px;
+    background: white;
     overflow: hidden;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
 }
 
 .brend-title {
