--- a/src/css/parts-section.css
+++ b/src/css/parts-section.css
@@ -5,6 +5,7 @@
 
 .parts-title{
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .card-list {
@@ -27,9 +28,9 @@
 }
 
 .card-image {
-    width: 30px;
+    width: 50px;
     /* Фиксированная ширина изображения */
-    height: 30px;
+    height: 50px;
     /* Фиксированная высота изображения */
     object-fit: cover;
     /* Сохраняет пропорции, обрезая лишнее */
