--- a/src/css/parts-section.css
+++ b/src/css/parts-section.css
@@ -12,19 +12,23 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     /* 3 колонки */
-    gap: 20px;
+    gap: 10px;
     /* Расстояние между карточками */
     padding: 0;
     list-style: none;
+    align-items: start;
 }
 
 .card-item {
     display: flex;
+    flex-direction: column;
+    /* Основное направление - колонка */
     border: 1px solid #eee;
     border-radius: 8px;
     overflow: hidden;
-    height: 100%;
-    /* Для выравнивания высоты */
+    cursor: pointer;
+    transition: all 0.3s ease;
+    /* max-height: 80px; */
 }
 
 .card-image {
@@ -66,4 +70,33 @@
         grid-template-columns: 1fr;
         /* 1 колонка на телефонах */
     }
+}
+
+.card-details {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease;
+}
+
+.card-details.active {
+    max-height: 500px;
+    /* Достаточно для контента */
+}
+
+.details-list {
+    padding: 0 20px 15px 40px;
+    margin: 0;
+}
+
+.details-list li {
+    margin-bottom: 4px;
+    color: #555;
+}
+
+.card-main {
+    display: flex;
+    /* Делаем flex-контейнер */
+    align-items: center;
+    /* Выравниваем по центру по вертикали */
+    padding: 12px 15px;
 }
