--- a/src/css/header.css
+++ b/src/css/header.css
@@ -190,3 +190,24 @@ header{
     transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+
+/* Адаптивность для мобильных */
+@media (max-width: 768px) {}
+
+@media (max-width: 480px) {
+.bott-header{
+    flex-direction: column;
+}
+
+.callback-form{
+    display: none;
+}
+
+.logo{
+    display: none;
+}
+
+.contacts-div{
+    flex-direction: column;
+}
+}
