--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -25,5 +25,6 @@
   font-family: "Rubik Doodle Shadow", system-ui;
   font-weight: 800;
   font-style: normal;
-
+  color: azure;
+  font-size: 36px;
 }
