--- a/src/css/main-section.css
+++ b/src/css/main-section.css
@@ -1,18 +1,23 @@
 .main-section{
-    display: flex;
-}
+    padding: 20px 30px;
+    background: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    min-height: 300px;
 
-.main-image{
-    border-radius: 32px;
-    max-width: 640px;
-    padding: 20px 20px;
 }
 
 .main-content{
-    max-width: 640px;
-    padding: 20px 20px;
+color: black;
 }
 
 .main-text-content{
     margin-top: 20px;
+} 
+
+@media (max-width: 480px) {
+    .main-section {
+        display: flex;
+        flex-direction: column;
+    }
 }
