--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
 @import url('./css/parts-section.css');
 @import url('./css/reset.css');
 @import url('./css/work-section.css');
+@import url('./css/partner-section.css');
 
 .container,
 footer,
