--- a/src/css/header.css
+++ b/src/css/header.css
@@ -270,7 +270,7 @@ header{
         position: absolute;
         top: 100%;
         left: 0;
-        width: 100%;
+        width: 180px;
         background: white;
         z-index: 1000;
         padding: 12px;
@@ -299,4 +299,9 @@ header{
     .contacts-div {
         display: none;
     }
+}
+
+.mobile-namber{
+    font-size: 20px;
+    margin: 4px 0 8px 4px;
 }
