--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,5 +1,6 @@
 .hero {
-    background-image: url(../img/main-photo.jpeg);
+    /* background-image: url(../img/main-photo.jpeg); */
+    background-image: url(../img/hero-bg.jpeg);
     background-size: cover;
     background-position: center;
     min-height: 450px;
