--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
 @import url('./css/work-section.css');
 @import url('./css/partner-section.css');
 @import url('./css/footer.css');
+@import url('./css/order-steps.css');
 
 .container,
 footer,
