--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -40,14 +40,16 @@
     display: flex;
     flex-direction: column;
     max-width: 200px;
+    gap: 6px;
 }
 
 .title-card{
     color: orange;
     margin-bottom: 4px;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-size: 20px;
+    font-weight: 100;
+    font-size: 18px;
 }
 
 .logo-footer{
@@ -70,13 +72,12 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    gap: 8px;
 }
 
 .contacts-div-footer{
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 18px;
 }
 
 .to-home {
@@ -156,15 +157,16 @@ footer {
 
 .footer-slogon{
     color: orange;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
+    font-weight: 100;
     font-size: 18px;
 }
 
 .middle-footer{
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 16px;
     flex: 1;
 }
 
