--- a/src/css/partner-section.css
+++ b/src/css/partner-section.css
@@ -19,6 +19,7 @@
     font-family: "Lora", serif;
     font-optical-sizing: auto;
     font-size: 34px;
+    font-weight: 200;
 }
 
 .kharkiv-map{
@@ -26,9 +27,10 @@
 }
 
 .partners-description{
-    font-family: "Montserrat", sans-serif;
+    font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-size: 22px;
+    font-weight: 100;
+    font-size: 18px;
     margin-bottom: 42px;
 }
 
