--- a/src/css/parts-section.css
+++ b/src/css/parts-section.css
@@ -13,7 +13,7 @@
 }
 
 .card-item{
-    background-color: white;
+    background-color: orange;
 }
 
 .card-list {
@@ -48,6 +48,7 @@
     /* Сохраняет пропорции, обрезая лишнее */
     flex-shrink: 0;
     /* Запрещает уменьшение */
+    filter: brightness(85%);
 }
 
 .card-text {
@@ -101,7 +102,7 @@
 
 .details-list li {
     margin-bottom: 4px;
-    color: #555;
+    color: black;
 }
 
 .card-main {
