--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -5,6 +5,7 @@
   background-position: center;
   min-height: 450px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -35,12 +36,25 @@
   font-family: "PT Sans Narrow", sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: azure;
+  color: orange;
   font-size: 42px;
 }
 
 .hero-cont {
-  color: white;
+  color: orange;
   font-size: 24px;
   margin-top: 16px;
 }
+
+.callback-form-hero{
+  display: none;
+}
+
+    /* Адаптация под разные экраны */
+    @media (max-width: 768px) {
+      .callback-form {
+          display: flex;
+          margin-top: 74px;
+          flex-direction: column;
+        }
+    }
