--- a/src/css/header.css
+++ b/src/css/header.css
@@ -209,7 +209,11 @@ header{
 }
 
 /* Адаптивность для мобильных */
-@media (max-width: 768px) {}
+@media (min-width: 480px) {
+    .hero .callback-form{
+        display: none;
+    }
+}
 
 /* Мобильная версия */
 @media (max-width: 479px) {
