--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -60,3 +60,63 @@ header{
     margin-right: auto;
     padding: 4px 8px;
 }
+
+/* КНОПКА ПЕРЕВОДА САЙТА */
+
+.language-switcher {
+    position: relative;
+    display: inline-block;
+    width: 90px;
+    font-family: Arial, sans-serif;
+    z-index: 1000;
+}
+
+.current-language {
+    display: flex;
+    align-items: center;
+    background: orange;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.current-language:hover {
+    background: orangered;
+}
+
+.lang-flag {
+    font-size: 8px;
+}
+
+.arrow {
+    margin-left: auto;
+    font-size: 8px;
+}
+
+.language-options {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: orange;
+    border-radius: 4px;
+    margin-top: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: none;
+}
+
+.language-option {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.language-option:hover {
+    background: #f5f5f5;
+}
+
+.language-switcher.active .language-options {
+    display: block;
+}
+
+.language-switcher.active .arrow {
+    transform: rotate(180deg); }
