--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -19,17 +19,11 @@
 
 .main-footer{
     display: flex;
-    padding: 2px 14px;
     justify-content: space-between;
 }
 
 .entry-footer{
-    border-radius: 4px;
-    max-width: 1160px;
-    margin-left: auto;
-    margin-right: auto;
-    background: black;
-    padding: 20px 30px;
+    padding-top: 20px;
 }
 
 .contacts-div-footer{
@@ -114,7 +108,6 @@ footer .social{
 
 .to-home .text {
     opacity: 0;
-    /* padding-right: 8px; */
     transition: opacity 0.2s ease;
     transform: translateX(-10px);
 }
@@ -134,11 +127,10 @@ footer .social{
     transition: opacity 0.3s ease 0.1s, transform 0.3s ease;
 }
 
-/* Стили для адаптации у футера (как в предыдущем примере) */
-footer {
-    position: relative;
-    z-index: 50;
-    /* padding-bottom: 80px; */
+.footer {
+    border: 1px solid #4c4e61;
+    padding-right: 30px;
+    padding-left: 30px;
 }
 
 .to-home.sticky-bottom {
