--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -44,21 +44,12 @@ html {
 /* цвет фона */
 
 header, body, footer{
-background: #F5F9FF;
-box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+background: black;
 }
 
 body{
-    max-width: 1160px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-header{
-    /* max-width: 1160px; */
-    margin-left: auto;
-    margin-right: auto;
-    padding: 4px 8px;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 /* КНОПКА ПЕРЕВОДА САЙТА */
@@ -67,6 +58,7 @@ header{
     position: relative;
     display: inline-block;
     width: 90px;
+    padding-top: 2px;
     font-family: Arial, sans-serif;
     z-index: 1000;
 }
@@ -74,13 +66,9 @@ header{
 .current-language {
     display: flex;
     align-items: center;
-    background: orange;
+    background: white;
     border-radius: 4px;
     cursor: pointer;
-}
-
-.current-language:hover {
-    background: orangered;
 }
 
 .lang-flag {
@@ -97,11 +85,12 @@ header{
     top: 100%;
     left: 0;
     width: 100%;
-    background: orange;
+    background: white;
     border-radius: 4px;
-    margin-top: 5px;
+    margin-top: 2px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     display: none;
+    padding: 8px 8px;
 }
 
 .language-option {
