--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,11 @@ section {
     margin-left: auto;
     margin-right: auto;
     max-width: 1260px;
-    /* padding: 16px; */
-    border: 1px solid #000;
-    border-radius: 10px;
-    margin-bottom: 5px;
+}
+
+section:first-child {
+    max-width: none;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100vw;
 }
